[package]
name = "pynthora-terminal"
version = "0.2.0"
edition = "2021"
authors = ["pynthora Foundation"]
description = "pynthora Terminal - data ingestion CLI + SDK for autonomous robot networks"
license = "MIT"
repository = "https://github.com/pynthora/pynthora-terminal"
homepage = "https://pynthora.com"
keywords = ["pynthora", "terminal", "cli", "ingestion", "sdk", "robots", "data-pipeline"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pynthora-terminal"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"

# File system
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "color"] }

# Colored output
colored = "2.1"

# Progress indicators
indicatif = "0.17"

# Validation
validator = { version = "0.18", features = ["derive"] }

# URL parsing
url = "2.5"

[dev-dependencies]
# Testing
mockito = "1.3"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

